asg/tests/pass/import/src/test-import.leo
circuit Point {
  x: u32
  y: u32
}

function foo() -> u32 {
  return 1u32;
}